try to fix nav buttons on mobile

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ button {
     margin-left: 42.9%;
     margin-bottom: 15px;
     overflow: hidden;
+    overflow-wrap: normal;
 }
 .navbar button{
     font-weight: bold;
